# juce-webview-tutorial

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  package-lock.json  package.json  post_build.sh
CPM_modules/: FindJUCE.cmake
Installer/AQUA_v1/: AQUA_v1.pkgproj
Installer/AQUA_v1_x86/: AQUA_v1_x86.pkgproj  AQUA_v2_x86.pkgproj
plugin/: CMakeLists.txt  Makefile  cmake_install.cmake
plugin/include/AQUA/: AudioClassification.h  PluginEditor.h  PluginProcessor.h  SampleRateConversion.h  WriteToWav.h
plugin/react_ui/: package-lock.json  package.json
plugin/react_ui/src/: App.css  App.jsx  ClassificationGraph.jsx
plugin/react_ui/src/components/: AudioClassificationGraph.jsx  ConfidenceTrackingGraph.jsx  LabelDropdown.jsx  ThresholdSlider.jsx
plugin/react_ui/src/components/AudioClassificationGraph/: index.jsx
plugin/react_ui/src/components/ClassificationGraph/: index.jsx
plugin/react_ui/src/components/graphs/ClassificationGraph/: index.jsx
plugin/react_ui/src/constants/: constants.js
plugin/react_ui/src/hooks/: useD3Graph.js
plugin/react_ui/src/styles/: App.css
plugin/react_ui/src/styles/components/: audio-classification.css  confidence-tracking.css  graph-base.css  label-dropdown.css  threshold-slider.css
plugin/react_ui/src/styles/graphs/: audio-classification.css  classification.css
plugin/react_ui/src/utils/: dataHandler.js
plugin/source/: AudioClassification.cpp  PluginEditor.cpp  PluginProcessor.cpp  SampleRateConversion.cpp  WriteToWav.cpp
plugin/ui/public/: index.html
plugin/ui/public/css/: styles.css
plugin/ui/public/js/: classificationGraph.js  confidenceTrackingGraph.js  constants.js  contextMenu.js  dataHandler.js  graphSetup.js  graphUpdater.js  index.js
scripts/: create_universal_libsamplerate.sh  post_build.sh
